# hospital-system2

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: README.md
static/css/: style.css
static/js/: main.js
templates/: base.html  contact.html  family_health.html  health_assistant.html  health_guide.html  index.html  mental_health.html  services.html
